--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html,
+body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
 .canvas {
-  border: 2px solid black;
+  display: block;
+  background-color: white;
 }
